--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -17,3 +17,25 @@ body {
   .home-section img{
     width: 100%;
 }
+
+
+.footer-head h4{
+  color: #FFF;
+  text-align: justify;
+  font-family: Montserrat;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: bold;
+  line-height: normal;
+}
+
+.footer-body .span{
+  color: #FFF;
+  text-align: justify;
+  font-family: Montserrat;
+  font-size: 17px;
+  margin-left:15%;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
